# fri3d-ap-map

./: .gitignore  TODO.md  app.py  config.ini.example  pyproject.toml  telegrambot4.py
static/css/: style.css
templates/: apdetail.html.j2  map.html.j2
