[tool.poetry]
name = "fri3d-ap-map"
version = "0.1.0"
description = ""
authors = ["Ward De Ridder <ward.deridder@ap.be>", "Tom Goedemé <flufsor@gmail.com>"]
repository = "https://github.com/warddr/fri3d-ap-map"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
geojson = "^3.1.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
